--- a/sign-up.html
+++ b/sign-up.html
@@ -17,9 +17,9 @@
         <div class="sign-up">
             <h2>sign-up</h2><br>
             <input type="text" placeholder="full name" id="username">
-            <input type="email" name="email" required> placeholder="email@" id="email">
-
-
+           <input type="email" 
+       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
+       title="أدخل بريد إلكتروني صحيح">
             <input type="password" placeholder="passwrd..." id="password">
             <button id="btnsign">register</button>
             <p>Already have an account? <a href="log-in.html">log-in</a></p>
