--- a/sign-up.html
+++ b/sign-up.html
@@ -17,8 +17,7 @@
         <div class="sign-up">
             <h2>sign-up</h2><br>
             <input type="text" placeholder="full name" id="username">
-           <input type="email" 
-       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
+           <input type="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" 
        title="أدخل بريد إلكتروني صحيح">
             <input type="password" placeholder="passwrd..." id="password">
             <button id="btnsign">register</button>
